--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
             "aws_appsync_graphqlEndpoint": "${{ vars.APPSYNC_API_ENDPOINT }}",
             "aws_appsync_region": "${{ secrets.GENERAL_REGION }}",
             "aws_appsync_authenticationType": "${{ vars.APPSYNC_AUTH_TYPE }}"
-          }' > amplifyconfiguration.json
+          }' > src/amplifyconfiguration.json
       - name: Build source
         env:
           MAPBOX_GL_ACCESS_TOKEN: ${{ secrets.MAPBOX_GL_ACCESS_TOKEN }}
