--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,18 @@ jobs:
           npm install
       - name: Add amplifyconfiguration.json
         run: |
-          jq -n '{
-            "aws_cognito_region": "${{ secrets.GENERAL_REGION }}"
-            "aws_cognito_identity_pool_id": "${{ secrets.COGNITO_IDENTITY_POOL_ID }}",
-            "aws_project_region": "${{ secrets.GENERAL_REGION }}",
-            "aws_appsync_graphqlEndpoint": "${{ vars.APPSYNC_API_ENDPOINT }}",
-            "aws_appsync_region": "${{ secrets.GENERAL_REGION }}",
-            "aws_appsync_authenticationType": "${{ vars.APPSYNC_AUTH_TYPE }}"
+          jq -n \
+          --arg region ${{ secrets.GENERAL_REGION }} \
+          --arg cognitoPoolId ${{ secrets.COGNITO_IDENTITY_POOL_ID }} \
+          --arg appSyncApiEndpoint ${{ vars.APPSYNC_API_ENDPOINT }} \
+          --arg appSyncAuthType ${{ vars.APPSYNC_AUTH_TYPE }} \
+          '{
+            "aws_cognito_region": $region,
+            "aws_cognito_identity_pool_id": $cognitoPoolId,
+            "aws_project_region": $region,
+            "aws_appsync_graphqlEndpoint": $appSyncApiEndpoint,
+            "aws_appsync_region": $region,
+            "aws_appsync_authenticationType": $appSyncAuthType
           }' > src/amplifyconfiguration.json
       - name: Build source
         env:
