--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,3 +45,11 @@ jobs:
           BOUNDARY_COORDINATE_LAT_BOTTOM_LEFT: ${{ vars.BOUNDARY_COORDINATE_LAT_BOTTOM_LEFT }}
         run: |
           npm run build
+      - name: Deploy build files to S3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.GENERAL_REGION }}
+        run: |
+          aws s3 sync ./dist/* s3://receptacle-webpage
+          
