--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "rm -rf .parcel-cache dist && npx parcel public/index.html --https",
-    "build": "rm -rf .parcel-cache dist && npx parcel build public/index.html"
+    "build": "rm -rf .parcel-cache dist && npx parcel build public/index.html --no-source-maps"
   },
   "keywords": [],
   "author": "",
