--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,5 +51,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.GENERAL_REGION }}
         run: |
-          aws s3 sync ./dist/* s3://receptacle-webpage
+          aws s3 sync ./dist s3://receptacle-webpage
           
