--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,15 +19,15 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.GENERAL_REGION }}
-      - run: cd sam/s3-buckets
-      - run: sam build --use-container
       - run: |
+          cd sam/s3-buckets && \
+          sam build --use-container && \
           sam deploy \
-          --no-confirm-changeset \
-          --no-fail-on-empty-changeset \
-          --parameter-overrides \
-            BucketName=${{ vars.BUCKET_IMAGES }}
-            WebDomain=${{ vars.WEB_DOMAIN }}
+            --no-confirm-changeset \
+            --no-fail-on-empty-changeset \
+            --parameter-overrides \
+                BucketName=${{ vars.BUCKET_IMAGES }} \
+                WebDomain=${{ vars.WEB_DOMAIN }}
 
   staging-deployment-static-site:
     name: Staging Deployment
