--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
 
   staging-deployment-static-site:
     name: Staging Deployment
+    needs: resources-spin-up
     environment: Staging
     runs-on: ubuntu-latest
     steps:
