--- a/sam/s3-buckets/template.yaml
+++ b/sam/s3-buckets/template.yaml
@@ -8,7 +8,7 @@ Parameters:
     Type: String
 
 Resources:
-  S3BucketStaging:
+  S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Ref BucketName
