Environment secrets pass-on
- Update main.yml to pass secrets

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,10 @@ jobs:
     uses: ./.github/workflows/resources.yml
     with:
       environment: staging
+      secrets: inherit
 
   production-resources:
     uses: ./.github/workflows/resources.yml
     with:
       environment: production
+      secrets: inherit
