--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -4,7 +4,6 @@ on:
       environment:
         required: true
         type: string
-    secrets:
 
 jobs:
   resources-spin-up:
@@ -20,7 +19,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+          aws-region: ${{ secrets.GENERAL_REGION }}
       - run: |
           cd sam/s3-buckets && \
           sam build --use-container && \
