Secrets pass to reusable workflow
- Update reusable workflow approach

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,14 @@ on:
 
 jobs:
   staging-resources:
+    name: Workflow
     uses: ./.github/workflows/resources.yml
     with:
       environment: staging
+      secrets: inherit
 
   production-resources:
     uses: ./.github/workflows/resources.yml
     with:
       environment: production
+      secrets: inherit
