Sam stack name fix
- Add stack name flag for sam command

--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -35,4 +35,5 @@ jobs:
             --no-fail-on-empty-changeset \
             --parameter-overrides \
                 BucketName=${{ vars.BUCKET_NAME }} \
-                WebDomain=${{ vars.WEB_DOMAIN }}
+                WebDomain=${{ vars.WEB_DOMAIN }} \
+            --stack-name s3-bucket-images
