Environment setup update
- Add functions directory for lambda
- Update sam directory to include all resources
- Add graphql directory for appsync schema
- Update workflows yaml to fetch sam outputs

--- a/.github/workflows/prod-deployment.yml
+++ b/.github/workflows/prod-deployment.yml
@@ -2,16 +2,9 @@ name: Say Green Deployment
 
 on:
   push:
-    branches: [ master ]
+    branches: [ prod ]
 
 jobs:
-  staging-resources:
-    name: Workflow
-    uses: ./.github/workflows/resources.yml
-    with:
-      environment: staging
-    secrets: inherit
-
   production-resources:
     uses: ./.github/workflows/resources.yml
     with:
