--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -13,10 +13,13 @@ on:
         required: true
 
 jobs:
-  resources-spin-up:
+  resource-spin-up:
     name: Resources spin up for ${{ inputs.environment }} environment
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
+    outputs:
+      appSyncApiEndpoint: ${{ steps.sam-outputs.outputs.appSyncApiEndpoint }}
+      identityPoolId: ${{ steps.sam-outputs.outputs.identityPoolId }}
     steps:
       - uses: actions/checkout@v4
       - uses: aws-actions/setup-sam@v2
@@ -28,12 +31,22 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.GENERAL_REGION }}
       - run: |
-          cd sam/s3-buckets && \
+          cd sam && \
           sam build --use-container && \
           sam deploy \
             --no-confirm-changeset \
             --no-fail-on-empty-changeset \
             --parameter-overrides \
-                BucketName=${{ vars.BUCKET_NAME }} \
-                WebDomain=${{ vars.WEB_DOMAIN }} \
-            --stack-name s3-bucket-images
+                BucketImageName=${{ vars.BUCKET_IMAGE_NAME }} \
+                BucketStaticSiteName=${{ vars.BUCKET_SITE_NAME }} \
+                WebDomain=https://${{ vars.BUCKET_SITE_NAME }} \
+            --stack-name say-green
+      - run: |
+          outputs=$(aws cloudformation describe-stacks --stack-name say-green --query 'Stacks[0].Outputs' --output json)
+          echo $outputs > outputs.json
+      - id: sam-outputs
+        run: |
+          appSyncApiEndpoint=$(jq -r '.[] | select(.OutputKey == "AppSyncApiEndpoint").OutputValue' outputs.json)
+          identityPoolId=$(jq -r '.[] | select(.OutputKey == "IdentityPoolId").OutputValue' outputs.json)
+          echo "appSyncApiEndpoint=$appSyncApiEndpoint" >> "$GITHUB_OUTPUT"
+          echo "identityPoolId=$identityPoolId" >> "$GITHUB_OUTPUT"
