--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -35,12 +35,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.GENERAL_REGION }}
-      - uses: actions/setup-go@v4
-        with:
-          go-version: 1.20.6
       - run: |
           cd sam && \
-          sam build --use-container && \
+          sam build --use-container --build-image public.ecr.aws/sam/build-go1.x && \
           sam deploy \
             --no-confirm-changeset \
             --no-fail-on-empty-changeset \
