--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -45,8 +45,8 @@ jobs:
                 BucketImageName=${{ vars.BUCKET_IMAGE_NAME }} \
                 BucketStaticSiteName=${{ vars.BUCKET_SITE_NAME }} \
                 WebDomain=https://${{ vars.BUCKET_SITE_NAME }} \
-            --stack-name say-green
-            --resolve-s3
+            --stack-name say-green \
+            --resolve-s3 \
             --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND
       - run: |
           outputs=$(aws cloudformation describe-stacks --stack-name say-green --query 'Stacks[0].Outputs' --output json)
