--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -47,7 +47,8 @@ jobs:
                 WebDomain=https://${{ vars.BUCKET_SITE_NAME }} \
             --stack-name say-green \
             --resolve-s3 \
-            --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND
+            --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND \
+            --on-failure ROLLBACK
       - run: |
           outputs=$(aws cloudformation describe-stacks --stack-name say-green --query 'Stacks[0].Outputs' --output json)
           echo $outputs > outputs.json
