Update reusable workflow outputs access

--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -3,8 +3,6 @@ name: Say Green Deployment
 on:
   push:
     branches: [ master ]
-  workflow_dispatch:
-    
 
 jobs:
   staging-resources:
@@ -18,6 +16,6 @@ jobs:
     needs: staging-resources
     with:
       environment: staging
-      appSyncApiEndpoint: ${{ needs.staging-resources.outputs.appSyncApiEndpoint }}
-      identityPoolId: ${{ needs.staging-resources.outputs.identityPoolId }}
+      appSyncApiEndpoint: ${{ jobs.staging-resources.outputs.appSyncApiEndpoint }}
+      identityPoolId: ${{ jobs.staging-resources.outputs.identityPoolId }}
     secrets: inherit
