Fix image upload to s3
- Update identity pool SAM to include s3 put object policy
- Update CORS of bucket image to allowed headers and put method
- Update source-build.yml to include AWS_REGION and BUCKET_NAME env
- Update image uploader service to use bucket name from env

--- a/.github/workflows/source-build.yml
+++ b/.github/workflows/source-build.yml
@@ -54,6 +54,8 @@ jobs:
       - name: Build source
         env:
           MAPBOX_GL_ACCESS_TOKEN: ${{ secrets.MAPBOX_GL_ACCESS_TOKEN }}
+          AWS_REGION: ${{ vars.GENERAL_REGION }}
+          BUCKET_IMAGE: ${{ vars.BUCKET_IMAGE_NAME }}
           BOUNDARY_COORDINATE_LNG_TOP_LEFT: ${{ vars.BOUNDARY_COORDINATE_LNG_TOP_LEFT }}
           BOUNDARY_COORDINATE_LAT_TOP_LEFT: ${{ vars.BOUNDARY_COORDINATE_LAT_TOP_LEFT }}
           BOUNDARY_COORDINATE_LNG_TOP_RIGHT: ${{ vars.BOUNDARY_COORDINATE_LNG_TOP_RIGHT }}
