--- a/sam/s3/bucket-images.yaml
+++ b/sam/s3/bucket-images.yaml
@@ -17,6 +17,9 @@ Resources:
           - AllowedMethods:
               - "GET"
               - "POST"
+              - "PUT"
             AllowedOrigins:
               - !Ref WebDomain
+            AllowedHeaders: 
+              - "*"
         
