--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -16,6 +16,10 @@ on:
         value: ${{ jobs.resource-spin-up.outputs.appSyncApiEndpoint }}
       identityPoolId:
         value: ${{ jobs.resource-spin-up.outputs.identityPoolId }}
+      userPoolId:
+        value: ${{ jobs.resource-spin-up.outputs.userPoolId }}
+      userPoolClientId:
+        value: ${{ jobs.resource-spin-up.outputs.userPoolClientId }}
 
 jobs:
   resource-spin-up:
@@ -25,6 +29,8 @@ jobs:
     outputs:
       appSyncApiEndpoint: ${{ steps.sam-outputs.outputs.appSyncApiEndpoint }}
       identityPoolId: ${{ steps.sam-outputs.outputs.identityPoolId }}
+      userPoolId: ${{ steps.sam-outputs.outputs.userPoolId }}
+      userPoolClientId: ${{ steps.sam-outputs.outputs.userPoolClientId }}
     steps:
       - uses: actions/checkout@v4
       - uses: aws-actions/setup-sam@v2
