--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,6 +24,7 @@ jobs:
 
   production-resources:
     uses: ./.github/workflows/resources.yml
+    needs: [ staging-resources, staging-static-site ]
     with:
       environment: production
     secrets: inherit
@@ -35,6 +36,6 @@ jobs:
       environment: production
       appSyncApiEndpoint: ${{ needs.production-resources.outputs.appSyncApiEndpoint }}
       identityPoolId: ${{ needs.production-resources.outputs.identityPoolId }}
-      userPoolId: ${{ needs.staging-resources.outputs.userPoolId }}
-      userPoolClientId: ${{ needs.staging-resources.outputs.userPoolClientId }}
+      userPoolId: ${{ needs.production-resources.outputs.userPoolId }}
+      userPoolClientId: ${{ needs.production-resources.outputs.userPoolClientId }}
     secrets: inherit
