--- a/.github/workflows/resources.yml
+++ b/.github/workflows/resources.yml
@@ -36,13 +36,16 @@ jobs:
       - uses: aws-actions/setup-sam@v2
         with:
           use-installer: true
+      - uses: actions/setup-go@v5
+        with:
+          go-version: 1.20.6
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.GENERAL_REGION }}
       - run: |
-          sam build --template-file sam/template.yaml --use-container --build-image public.ecr.aws/sam/build-go1.x && \
+          sam build --template-file sam/template.yaml && \
           sam deploy \
             --no-confirm-changeset \
             --no-fail-on-empty-changeset \
