--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@parcel/reporter-bundle-analyzer": "^2.12.0",
     "@types/leaflet": "^1.9.6",
     "@types/mapbox-gl": "^2.7.17",
     "@types/node": "^20.8.10",
@@ -38,7 +39,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "events": "^3.3.0",
-    "parcel": "^2.11.0",
+    "parcel": "^2.12.0",
     "postcss": "^8.4.31",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
