--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "",
   "scripts": {
     "dev": "rm -rf .parcel-cache dist && npx parcel public/index.html --https",
-    "build": "rm -rf .parcel-cache dist && npx parcel build public/index.html --no-source-maps"
+    "build": "rm -rf .parcel-cache dist && npx parcel build public/index.html --no-source-maps",
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.2",
+    "@babel/core": "^7.24.4",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@splidejs/react-splide": "^0.7.12",
     "aws-amplify": "^6.0.9",
     "aws-sdk": "^2.1525.0",
+    "babel-jest": "^29.7.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
@@ -26,7 +29,12 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.1",
     "@parcel/reporter-bundle-analyzer": "^2.12.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.6",
     "@types/mapbox-gl": "^2.7.17",
     "@types/node": "^20.8.10",
@@ -39,13 +47,17 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "events": "^3.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "postcss": "^8.4.31",
     "process": "^0.11.10",
-    "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.3.5",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
 }
