--- a/infrastructure/s3/static-site.yaml
+++ b/infrastructure/s3/static-site.yaml
@@ -24,12 +24,7 @@ Resources:
         Version: 2012-10-17
         Statement:
           - Action:
-              - 's3:GetObject'
+              - "s3:GetObject"
             Effect: Allow
             Principal: "*"
-            Resource: !Join
-              - ''
-              - - 'arn:aws:s3:::'
-                - !Ref S3Bucket
-                - /*
-        
+            Resource: !Sub "arn:aws:s3:${AWS::Region}:${AWS::AccountId}:${S3Bucket}"
