Add shadcn as component code provider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "yaml.schemas": {
     "https://raw.githubusercontent.com/aws/serverless-application-model/main/samtranslator/schema/schema.json": [
       "file:///home/jayrald/receptacle-plotter/web/sam/cognito/identityPool.yaml",
-      "file:///home/jayrald/say-green/sam/cognito/identityPool.yaml"
+      "file:///home/jayrald/say-green/sam/cognito/identityPool.yaml",
+      "file:///home/jayrald/say-green/infrastructure/lambda/lambdaReceptacle.yaml"
     ]
-  }
+  },
+  "css.customData": [".vscode/tailwind.json"]
 }
