--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@splidejs/react-splide": "^0.7.12",
     "aws-amplify": "^6.0.9",
     "aws-sdk": "^2.1525.0",
     "babel-jest": "^29.7.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.372.0",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
