--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "https://raw.githubusercontent.com/aws/serverless-application-model/main/samtranslator/schema/schema.json": [
       "file:///home/jayrald/receptacle-plotter/web/sam/cognito/identityPool.yaml",
       "file:///home/jayrald/say-green/sam/cognito/identityPool.yaml",
-      "file:///home/jayrald/say-green/infrastructure/lambda/lambdaReceptacle.yaml"
+      "file:///home/jayrald/say-green/infrastructure/lambda/lambdaReceptacle.yaml",
+      "file:///home/jayrald/say-green/infrastructure/appsync/appSyncReceptacle.yaml"
     ]
   },
   "css.customData": [".vscode/tailwind.json"]
