--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@splidejs/react-splide": "^0.7.12",
     "aws-amplify": "^6.0.9",
     "aws-sdk": "^2.1525.0",
