--- a/components.json
+++ b/components.json
@@ -11,8 +11,8 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@app/components",
-    "utils": "@app/lib/utils",
-    "ui": "@app/components/ui"
+    "components": "@app/shared/components",
+    "utils": "@app/shared/lib/utils",
+    "ui": "@app/shared/components/ui"
   }
 }
