--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@reduxjs/toolkit": "^2.2.4",
     "@splidejs/react-splide": "^0.7.12",
     "aws-amplify": "^6.0.9",
     "aws-sdk": "^2.1525.0",
@@ -63,6 +64,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.21.3",
     "sonner": "^1.4.41",
